--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,8 +4,7 @@
   "compilerOptions": {
     "outDir": "./out-tsc/app",
     "types": [
-      "jquery",
-      "datatables.net"
+      "jquery"
     ]
   },
   "files": [
